--- a/assets/style.css
+++ b/assets/style.css
@@ -13,3 +13,51 @@
 body {
   font-family: "Montserrat", sans-serif;
 }
+
+button {
+  border: none;
+  background: none;
+  cursor: pointer;
+  font-family: inherit;
+}
+
+.header {
+  width: 95%;
+  margin-inline: auto;
+  display: flex;
+  /* justify-content: space-between; */
+  align-items: center;
+  padding: 1rem 0;
+}
+
+.title {
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  flex: 1;
+}
+
+.menu {
+  display: flex;
+  gap: 1rem;
+  flex: 1;
+  justify-content: center;
+}
+
+.link {
+  text-decoration: none;
+  color: #000;
+}
+
+.btn-container {
+  display: flex;
+  gap: 1rem;
+  flex: 1;
+  justify-content: flex-end;
+}
+
+.btn {
+  background-color: #000;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+}
