Added pricing section

--- a/assets/style.css
+++ b/assets/style.css
@@ -21,43 +21,91 @@ button {
   font-family: inherit;
 }
 
+/* header */
 .header {
-  width: 95%;
-  margin-inline: auto;
   display: flex;
   /* justify-content: space-between; */
   align-items: center;
   padding: 1rem 0;
 }
 
-.title {
+.header__title {
   font-size: 1.5rem;
   text-transform: uppercase;
   flex: 1;
 }
 
-.menu {
+.header__menu {
   display: flex;
   gap: 1rem;
   flex: 1;
   justify-content: center;
 }
 
-.link {
+.header__link {
   text-decoration: none;
   color: #000;
 }
 
-.btn-container {
+.header__btn-container {
   display: flex;
   gap: 1rem;
   flex: 1;
   justify-content: flex-end;
 }
 
+/* .header__link--red {
+  color: red;
+} */
+
+/* hero section */
+
+.hero {
+  text-align: center;
+  margin-top: 10rem;
+}
+
+.hero__title {
+  font-size: 3rem;
+  line-height: 1;
+  letter-spacing: -0.05em;
+  max-width: 25ch;
+  margin-inline: auto;
+}
+
+.hero__description {
+  font-size: 1.2rem;
+  max-width: 60ch;
+  margin: 2rem auto;
+}
+
+/* pricing */
+.pricing {
+  margin-top: 10rem;
+}
+
+.pricing__title {
+  font-size: 2.25rem;
+  letter-spacing: -0.05em;
+  line-height: 1;
+}
+
+.pricing__description {
+  font-size: 1.2rem;
+  max-width: 45ch;
+  margin: 1rem 0;
+}
+/* utility class */
 .btn {
+  text-decoration: none;
+  display: inline-block;
   background-color: #000;
   color: #fff;
   padding: 0.5rem 1rem;
   border-radius: 4px;
+}
+
+.container {
+  width: 90%;
+  margin-inline: auto;
 }
